cambios a html y css

--- a/pagina.html
+++ b/pagina.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+        <dir>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam repellendus culpa, totam illo et excepturi non ratione odio architecto id aliquam officiis animi laborum optio ab inventore nihil! Maxime, ipsa.
+            <h1>NUEVA ACTUALIZACION</h1>
+        </dir>
 </body>
 </html>
