--- a/pagina.html
+++ b/pagina.html
@@ -9,6 +9,8 @@
 <body>
     <div>
         <h2>cabeza</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum tenetur dignissimos asperiores tempora sunt modi natus, atque tempore recusandae blanditiis! Ratione minus voluptatem molestias id sunt nam praesentium a maiores!
+            </p>
     </div>
         <dir>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam repellendus culpa, totam illo et excepturi non ratione odio architecto id aliquam officiis animi laborum optio ab inventore nihil! Maxime, ipsa.
