--- a/pagina.html
+++ b/pagina.html
@@ -7,9 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <h3>hola</h3>
+    </div>
         <dir>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam repellendus culpa, totam illo et excepturi non ratione odio architecto id aliquam officiis animi laborum optio ab inventore nihil! Maxime, ipsa.
             <h1>NUEVA ACTUALIZACION</h1>
         </dir>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quae accusamus cum ut provident corrupti nisi libero quibusdam modi! Nulla suscipit fugit necessitatibus sequi, accusantium at expedita laudantium iste rerum.
+
+        </p>
+
 </body>
 </html>
