se cambio el nombre y color

--- a/pagina.html
+++ b/pagina.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div>
-        <h2>cabeza</h2>
+        <h2>inicio
+            
+        </h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum tenetur dignissimos asperiores tempora sunt modi natus, atque tempore recusandae blanditiis! Ratione minus voluptatem molestias id sunt nam praesentium a maiores!
             </p>
     </div>
